Name:      HDF5hs
Version:   0.1
License:   BSD3

Synopsis: A set of wrappings for the HDF5 library.
Description:
  A simple, experimental set of bindings for the HDF5 library for use with Haskell.
Author: John Lincoln Kenyon
Maintainer: jlkenyon@gmail.com
Cabal-Version: >= 1.8
build-type: Simple



library
  Exposed-Modules: HDF5hs.LowLevel, HDF5hs.MidLevel, HDF5hs
  HS-Source-Dirs:  src
  Build-Depends:   base >= 2.0, bytestring >= 0.9.1.5
  extra-libraries: hdf5, hdf5_hl
--  extra-lib-dirs: /home/jkenyon/system/hdf5-1.8.3/lib
--  include-dirs:   /home/jkenyon/system/hdf5-1.8.3/include

--flag test
--  description: Build test program.
--  default:     False

Executable testHDF5
  HS-Source-Dirs: src, src/HDF5hs/Tests
--  other-modules:  HDF5hs.LowLevel, HDF5hs.MidLevel, HDF5hs
--  Other-Modules:  HDF5hs
  main-is:        TestMain.hs
  build-depends:  base, HUnit, test-framework-hunit, test-framework, directory, HDF5hs, bytestring >= 0.9.1.5, haskell98
  extra-libraries: hdf5, hdf5_hl
