Name:      HDF5hs
Version:   0.2
License:   BSD3

Synopsis: A set of wrappings for the HDF5 library.
Description:
  A simple, experimental set of bindings for the HDF5 library for use with Haskell.
Author: John Lincoln Kenyon
Maintainer: jlkenyon@gmail.com
Cabal-Version: >= 1.8
build-type: Simple

library
  Exposed-Modules: HDF5hs,
    HDF5hs.LowLevel,
    HDF5hs.LowLevel.H5Types,
    HDF5hs.LowLevel.H5L,
    HDF5hs.LowLevel.H5A,
    HDF5hs.LowLevel.H5G,
    HDF5hs.LowLevel.H5F,
    HDF5hs.LowLevel.H5D,
    HDF5hs.LowLevel.H5LT,
    HDF5hs.LowLevel.H5S,
    HDF5hs.LowLevel.H5T,
    HDF5hs.MidLevel
  HS-Source-Dirs:  src
  Build-Depends:   base >= 2.0, bytestring >= 0.9.1.5, process >= 1.0.1.1
  extra-libraries: hdf5, hdf5_hl
-- This is only for my local setup! Should be cleaned up
--  extra-lib-dirs:  /home/jkenyon/system/hdf5-1.8.3/lib
--  include-dirs:    /home/jkenyon/system/hdf5-1.8.3/include
  extensions:      GeneralizedNewtypeDeriving

Executable testHDF5
  HS-Source-Dirs:  src, src/HDF5hs/Tests
  main-is:         TestMain.hs
  build-depends:   base, 
                   HUnit, 
                   QuickCheck,
                   test-framework-hunit, 
                   test-framework-quickcheck2,
                   test-framework, 
                   random,
                   directory, 
                   HDF5hs, 
                   bytestring >= 0.9.1.5, 
                   haskell98, 
                   process >= 1.0.1.1,
                   unix >= 2.3.2.0, 
                   filepath >= 1.1.0.2
  extra-libraries: hdf5, hdf5_hl


